tests/ui/offset-of/offset-of-unstable.stderr
error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $DIR/offset-of-unstable.rs:14:9
   |
LL |         Unstable,
   |         ^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $DIR/offset-of-unstable.rs:23:9
   |
LL |         UnstableWithStableFieldType,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $DIR/offset-of-unstable.rs:28:9
   |
LL |         UnstableWithStableFieldType,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: in this expansion of `offset_of!`
   |
  ::: $DIR/offset-of-unstable.rs:12:5
   |
LL | /     offset_of!(
LL | |
LL | |         Unstable,
LL | |         unstable
LL | |     );
   | |_____- in this macro invocation
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: in this expansion of `offset_of!`
   |
  ::: $DIR/offset-of-unstable.rs:18:5
   |
LL |     offset_of!(StableWithUnstableField, unstable);
   |     --------------------------------------------- in this macro invocation
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: in this expansion of `offset_of!`
   |
  ::: $DIR/offset-of-unstable.rs:20:5
   |
LL |     offset_of!(StableWithUnstableFieldType, stable.unstable);
   |     -------------------------------------------------------- in this macro invocation
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: in this expansion of `offset_of!`
   |
  ::: $DIR/offset-of-unstable.rs:21:5
   |
LL | /     offset_of!(
LL | |
LL | |         UnstableWithStableFieldType,
LL | |         unstable
LL | |     );
   | |_____- in this macro invocation
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: in this expansion of `offset_of!`
   |
  ::: $DIR/offset-of-unstable.rs:26:5
   |
LL | /     offset_of!(
LL | |
LL | |         UnstableWithStableFieldType,
LL | |         unstable.stable
LL | |     );
   | |_____- in this macro invocation
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0658`.
